--- a/src/components/CardBoard/CardBoard.module.css
+++ b/src/components/CardBoard/CardBoard.module.css
@@ -1,6 +1,6 @@
 .cardBoard{
-  /* display: flex; */
+  display: flex;
   background-color: rgb(182, 179, 179);
-  height: 100vh;
-  width:200vh ;
+  /* height: 100vh;
+  width:200vh ; */
 }
