--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -1,6 +1,65 @@
 
 .UserCard{
-  /* display: flex; */
+  display: flex;
+  flex-direction:column ;
   align-items:center;
+
+  /* width: 250px; */
+
+ border:1px solid #1a1b1b; 
+  border-radius: 5px;
+    box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+
+  .description{
+    display: flex; 
+    align-items: center;
+      flex-direction: column;
+  }
   
-}
+  .avatar{
+    border: 3px solid #e9eef3;
+      border-radius: 50%;
+    
+      margin-top: 30px;
+      margin-bottom: 30px;
+  }
+
+  .name{
+    font-weight: 700;
+      }
+  .tag{
+    margin-bottom: 10px;
+      color: #dbe1e7;
+  }
+  .location{
+    margin-bottom: 30px;
+      color: #dbe1e7;
+  }
+  .stats{
+    display: flex;
+    align-items:center;
+    /* justify-content: center; */
+    /* width: 100%; */
+    padding-inline-start: 0px;
+  }
+  .item{
+    display: flex;
+    align-items:center;
+    flex-direction: column;
+
+    padding: 20px;
+
+    border-right:1px solid #dddddd; ;
+  }
+  .item:last-child{
+    border-right:none;
+  }
+
+  .label{
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  .quantity{
+    font-weight: 700;
+  }
