--- a/src/components/FriendList/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendList/FriendListItem/FriendListItem.module.css
@@ -1,6 +1,15 @@
 .item{
   display: flex;
-  alignItems:center;
-
-  margin-bottom: 10px;
+  align-items: center;
+  
+  border: 1px solid #1a1b1b;
+    border-radius: 5px;
+    box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.75);
+    justify-content: center;
+    margin: 30px;
 }
+
+.avatar{
+  padding: 20px;
+}
+
