--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -4,7 +4,7 @@
   flex-direction:column ;
   align-items:center;
 
-  /* width: 250px; */
+margin: 30px;
 
  border:1px solid #1a1b1b; 
   border-radius: 5px;
@@ -39,8 +39,6 @@
   .stats{
     display: flex;
     align-items:center;
-    /* justify-content: center; */
-    /* width: 100%; */
     padding-inline-start: 0px;
     background-color: rgb(250, 248, 248);
   }
