--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,4 +1,4 @@
-.friendList{
+/* .friendList{
   border: 1px solid #1a1b1b;
     border-radius: 5px;
     box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.75);
@@ -6,4 +6,4 @@
     margin: 30px;
     padding: 0px;
     
-}
+} */
