--- a/src/components/FriendList/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendList/FriendListItem/FriendListItem.module.css
@@ -1,15 +1,31 @@
 .item{
   display: flex;
   align-items: center;
+  margin: 30px;
+  padding-left: 20px;
+
+  width: 450px;
   
   border: 1px solid #1a1b1b;
     border-radius: 5px;
     box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.75);
-    justify-content: center;
-    margin: 30px;
+    
 }
 
 .avatar{
   padding: 20px;
+}
+
+.statusOnline{
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: chartreuse;
+}
+.statusOfline{
+  width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(238, 17, 17);
 }
 
