--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -1,4 +1,3 @@
-
 .UserCard{
   display: flex;
   flex-direction:column ;
@@ -17,6 +16,7 @@
     display: flex; 
     align-items: center;
       flex-direction: column;
+      color: #000000;
   }
   
   .avatar{
@@ -30,6 +30,7 @@
   .name{
     font-weight: 700;
       }
+
   .tag{
     margin-bottom: 10px;
       color: #202122;
@@ -41,8 +42,10 @@
   .stats{
     display: flex;
     align-items:center;
-    
+    justify-content: center;
     padding-inline-start: 0px;
+    border-top: 1px solid #dddddd;
+      background-color: #e9eef3;
     background-color: rgb(250, 248, 248);
   }
 
